discussion/kv_engine/153272/153272_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46216: Check log format strings at compile-time

Make use of the FMT_STRING macro to check format strings at
compile-time using fmtlib v7.

If a call to the logger omits one or more arguments, then a
compile-time error will be seen - given the following (incorrect) call
missing a argument for 'bar':

    EP_LOG_DEBUG("Foo:{} bar:{}", foo);

The compiler fails with:

   fmt/format.h:2873:27: error: constexpr variable 'invalid_format' must be initialized by a constant expression

(admittedly not the most obvious, but you get what you get with C++
compiler errors...)

The trickiest part here is getting the logger to accept both calls
with format strings and variable args (like the example above), and
plain, single argument fixed string - e.g.

    EP_LOG_DEBUG("Something interesting happened");

This is because "Something interesting happened" isn't considered to
be a valid formatting string by fmtlib, and hence will trigger a
compile-time error if you attempt to verify it as such. Therefore it
is necessary to use the preprocessor to pass through such messages
without applying the FMT_STRING() macro to them.

Change-Id: I32c37dfc9672663e5741433885787f1e941fe795

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-05-10 15:06:41.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-10 15:07:33.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8906/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6: error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:20:24: error: use of undeclared identifier "spdlog" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:26:24: error: no member named "detail" in namespace "fmt"; did you mean "spdlog::details"? [clang-diagnostic-error]
    logInner(lvl, fmt, fmt::detail::make_args_checked<Args...>(fmt, args...));
                       ^~~~~~~~~~~
                       spdlog::details
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/spdlog/include/spdlog/details/pattern_formatter.h:25:11: note: "spdlog::details" declared here
namespace details {
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:26:37: error: no member named "make_args_checked" in namespace "spdlog::details" [clang-diagnostic-error]
    logInner(lvl, fmt, fmt::detail::make_args_checked<Args...>(fmt, args...));
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:26:55: error: "Args" does not refer to a value [clang-diagnostic-error]
    logInner(lvl, fmt, fmt::detail::make_args_checked<Args...>(fmt, args...));
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:19:35: note: declared here
template <typename S, typename... Args>
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:42:25: error: no member named "detail" in namespace "fmt"; did you mean "spdlog::details"? [clang-diagnostic-error]
    logInner(lvl, "{}", fmt::detail::make_args_checked<T>("{}", msg));
                        ^~~~~~~~~~~
                        spdlog::details
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/spdlog/include/spdlog/details/pattern_formatter.h:25:11: note: "spdlog::details" declared here
namespace details {
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:42:38: error: no member named "make_args_checked" in namespace "spdlog::details" [clang-diagnostic-error]
    logInner(lvl, "{}", fmt::detail::make_args_checked<T>("{}", msg));
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:42:56: error: "T" does not refer to a value [clang-diagnostic-error]
    logInner(lvl, "{}", fmt::detail::make_args_checked<T>("{}", msg));
                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:37:20: note: declared here
template <typename T>
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8906/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6:
error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8906/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7458/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-05-10 15:17:57.000000000
Message: 
Topic set to CC.next
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-05-27 11:25:56.000000000
Message: 
Patch Set 1:

This change is ready for review.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 11:39:56.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10913/ : FAILURE

Compile error at [2021-05-27T11:34:46.477Z] ../kv_engine/engines/ep/src/bucket_logger_impl.h:26:37:
error: ?make_args_checked? is not a member of ?fmt::v7::detail?; did you mean ?make_checked??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10913/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10769/ : FAILURE

Compile error at [2021-05-27T11:34:50.034Z] ../kv_engine/engines/ep/src/bucket_logger_impl.h:26:37:
error: ?make_args_checked? is not a member of ?fmt::v7::detail?; did you mean ?make_checked??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10769/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11173/ : FAILURE

Compile error at [2021-05-27T11:36:57.840Z] ../kv_engine/engines/ep/src/bucket_logger_impl.h:26:24:
error: no template named "make_args_checked" in namespace "fmt::v7::detail"; did you mean "fmt::make_args_checked"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11173/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18735/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9837/ : FAILURE

Compile error at [2021-05-27T11:30:50.110Z] ../kv_engine/engines/ep/src/bucket_logger_impl.h:26:24:
error: no template named "make_args_checked" in namespace "fmt::v7::detail"; did you mean "fmt::make_args_checked"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9837/ )
----------------------------------------------------------------------------------------------------------------------
